syntax = "proto3";

package protocol;

import "google/protobuf/empty.proto";

import "protocol/setup.proto";
import "protocol/bucket.proto";
import "protocol/auth.proto";
import "protocol/query.proto";

service StoreService {
  // Setup
  rpc CheckSetup(google.protobuf.Empty) returns (CheckSetupRes) {}
  rpc Setup(SetupParams) returns (google.protobuf.Empty) {}
  rpc SignIn(SignInParams) returns (google.protobuf.Empty) {}
  rpc SignOut(google.protobuf.Empty) returns (google.protobuf.Empty) {}

  // Bucket
  rpc ListAllBuckets(ListAllBucketsParams) returns (ListAllBucketsRes) {}
  rpc RetrieveBucket(RetrieveBucketParams) returns (Bucket) {}
  rpc RetrieveBucketLog(RetreiveBucketLogParams)
      returns (RetreiveBucketLogRes) {}
  rpc DeleteBucket(DeleteBucketParams) returns (OpRes) {}

  // Auth
  rpc ListAuthorization(ListAuthorizationParams)
      returns (ListAuthorizationRes) {}
  rpc CreateAuthorization(CreateAuthorizationParams) returns (Authorization) {}

  // Query
  rpc QueryData(QueryParams) returns (QueryRes) {}
  rpc InsertData(InsertDataParams) returns (InsertDataRes) {}
}
