syntax = "proto3";

package protocol;

message CheckSetupRes { bool setup = 1; }

message SetupParams {
  string username = 1;
  string password = 2;
  string org = 3;
  string bucket = 4;
  int64 retentionPeriodHrs = 5;
}
